--- a/AppworkSchool/week-1/Assignment-1/css/style/components/_nav.sass
+++ b/AppworkSchool/week-1/Assignment-1/css/style/components/_nav.sass
@@ -5,6 +5,11 @@
     --nav-color: #f6f6f6
     --nav-height: 4.75rem
 
+header
+    position: sticky
+    z-index: 1001
+    top: 0
+
 .nav
     &-container
         width: 100%
@@ -54,8 +59,8 @@
                 left: 0
                 background: var(--nav-bg)
                 padding-block-end: 1rem
-                padding-inline: 1rem
-                z-index: -1001
+                padding-inline: 1.5rem
+                z-index: -1
                 transition: all 0.25s ease-in-out
 
                 &.active
@@ -71,7 +76,7 @@
                 background: var(--nav-bg)
                 padding-block-end: 1rem
                 padding-inline: 1rem
-                z-index: -1001
+                z-index: -1
                 transition: all 0.25s ease-in-out
 
                 &.active
